Fix shopping cart icon not align

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-button {
+/* button {
   cursor: pointer;
   display: block;
   text-align: center;
@@ -133,10 +133,28 @@ button {
   border-radius: 5px;
   border: none;
   font-family: "Montserrat", sans-serif;
-}
+} */
 
 .btnCard img {
-  margin-right: 10px;
+  padding-right: 10px;
+}
+
+.btnCard {
+  width: 100%;
+  padding: 15px;
+
+  display: flex;
+
+  justify-content: center;
+  border: none;
+  /* -ms-flex-align: center; */
+  align-items: center;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(158, 36%, 37%);
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
